// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmojiPickerDialog - Snapshots > matches snapshot when closed 1`] = `
<div
  data-open="false"
  data-testid="dialog"
/>
`;

exports[`EmojiPickerDialog - Snapshots > matches snapshot when open 1`] = `
<div
  data-open="true"
  data-testid="dialog"
>
  <div
    class="max-w-sm overflow-hidden p-0 outline-none sm:p-0"
    data-testid="dialog-content"
  >
    <p
      data-testid="dialog-description"
    >
      Select an emoji
    </p>
    <div
      class="flex justify-center overflow-hidden"
      data-testid="container"
    >
      <div
        class="w-full max-w-full overflow-hidden"
        data-testid="container"
      >
        <div
          data-testid="emoji-picker"
        >
          <button
            data-testid="test-emoji-select"
          >
            Select Emoji
          </button>
          <div
            data-testid="max-length"
          >
            none
          </div>
          <div
            data-testid="current-input"
          >
            none
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EmojiPickerDialog - Snapshots > matches snapshot with currentInput 1`] = `
<div
  data-open="true"
  data-testid="dialog"
>
  <div
    class="max-w-sm overflow-hidden p-0 outline-none sm:p-0"
    data-testid="dialog-content"
  >
    <p
      data-testid="dialog-description"
    >
      Select an emoji
    </p>
    <div
      class="flex justify-center overflow-hidden"
      data-testid="container"
    >
      <div
        class="w-full max-w-full overflow-hidden"
        data-testid="container"
      >
        <div
          data-testid="emoji-picker"
        >
          <button
            data-testid="test-emoji-select"
          >
            Select Emoji
          </button>
          <div
            data-testid="max-length"
          >
            none
          </div>
          <div
            data-testid="current-input"
          >
            Hello
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EmojiPickerDialog - Snapshots > matches snapshot with maxLength 1`] = `
<div
  data-open="true"
  data-testid="dialog"
>
  <div
    class="max-w-sm overflow-hidden p-0 outline-none sm:p-0"
    data-testid="dialog-content"
  >
    <p
      data-testid="dialog-description"
    >
      Select an emoji
    </p>
    <div
      class="flex justify-center overflow-hidden"
      data-testid="container"
    >
      <div
        class="w-full max-w-full overflow-hidden"
        data-testid="container"
      >
        <div
          data-testid="emoji-picker"
        >
          <button
            data-testid="test-emoji-select"
          >
            Select Emoji
          </button>
          <div
            data-testid="max-length"
          >
            12
          </div>
          <div
            data-testid="current-input"
          >
            none
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
